--- a/Cargo.toml
+++ b/Cargo.toml
@@ -26,6 +26,9 @@ hex = { version = "0.4.3", default-features = false }
 panic-probe = { version = "0.3.2", features = ["print-defmt"] }
 portable-atomic = { version = "1.5", default-features = false, features = ["critical-section"] }
 serde = { version = "1.0.215", default-features = false, features = ["derive"] }
+ssd1306 = "0.9"
+embedded-graphics = "0.8"
+profont = "0.7"
 static_cell = "2.1.0"
 smart-leds = "0.4.0"
 
